--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     },
     "moduleDirectories": [
       "node_modules",
-      "frontend/src",
-      "backend"
+      "src"
     ],
     "moduleFileExtensions": [
       "js",
