--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux": "^3.6.0",
     "@types/redux-immutable": "^4.0.1",
     "@types/redux-logger": "^3.0.8",
     "@types/uuid": "^8.3.0",
@@ -78,6 +79,7 @@
     "eslint-plugin-react": "^7.20.5",
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^6.0.5",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^4.3.0",
     "img-loader": "^3.0.1",
     "jest": "^26.2.2",
