--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-immutable": "^4.0.1",
     "@types/redux-logger": "^3.0.8",
+    "@types/socket.io-client": "^1.4.34",
     "@types/uuid": "^8.3.0",
     "@types/vfile-message": "^2.0.0",
     "@types/webpack-env": "^1.16.0",
@@ -68,7 +69,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^4.2.0",
+    "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -85,7 +86,7 @@
     "jest": "^26.2.2",
     "jest-dom": "^4.0.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "postcss": "^8.1.14",
+    "postcss": "^8.2.1",
     "postcss-import": "^13.0.0",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
@@ -99,6 +100,7 @@
     "tslint": "^6.1.3",
     "tslint-react": "^5.0.0",
     "typescript": "^4.1.2",
+    "typescript-plugin-css-modules": "^2.8.0",
     "url-loader": "^4.1.0",
     "uuid": "^8.3.1",
     "webpack": "^4.44.2",
@@ -114,6 +116,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^3.0.4"
   }
 }
