--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,12 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "src",
-    "target": "es6",
-    "module": "esnext",
+    "target": "esnext",
+    "module": "es6",
     "moduleResolution": "node",
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
     "jsx": "react",
     "esModuleInterop": true,
     "noEmitOnError": true,
@@ -12,10 +15,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "exclude": [
     "node_modules",
     "**/__tests__/**"
-  ]
+  ],
+  "include": ["./src/**/*", "styles.d.ts"]
 }
